--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,8 @@ dependencies:
   fluttertoast:
   # agora_rtc_engine: ^6.0.4
   permission_handler:
-  agora_uikit: 1.0.4
+  # agora_uikit: 1.0.4
+  http: ^0.13.3  
   flutter_launcher_icons: "^0.11.0"
   wakelock: ^0.6.2
 
